--- a/estilos.css
+++ b/estilos.css
@@ -1,19 +1,28 @@
 
 
 body {
-	background-color: white;
+	background-color: #F3F3F3;
+	
+}
+
+* {
 	box-sizing: border-box;
 }
 
 .telaInicial {
-	display: flex;
+	background-color: white;
+	position: fixed;
+	top: 0;
+	left: 0;
+	display: none;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	width: 270px;
-	height: 400px;
-	margin: 50px auto;
-	
+	width: 100%;
+	height: 100%;
+	margin: 0 auto;
+	z-index: 2;
+	/* Tirar display none e talvez add z-index */
 }
 
 .telaInicial input {
@@ -36,3 +45,86 @@ body {
 	margin-top: 15px;
 }
 
+.barraTop {
+	background-color: white;
+	position: fixed;
+	top: 0;
+	left: 0;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	width: 100%;
+	height: 80px;
+	box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.05);
+	z-index: 1;
+}
+
+.barraTop img {
+	width: 75px;
+	height: 53px;
+	margin-left: 20px;
+}
+
+.barraTop ion-icon {
+	width: 42px;
+	height: 30px;
+	margin-right: 20px;
+}
+
+.barraBot {
+	background-color: white;
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	width: 100%;
+	height: 80px;
+	box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.05);
+	z-index: 1;
+}
+
+.barraBot input {
+	width: 100%;
+	height: 30px;
+	margin-left: 20px;
+	border: 0;
+	font-size: 18px;
+	font-style: italic;
+	color: black;
+}
+
+.barraBot ion-icon {
+	width: 26px;
+	height: 26px;
+	margin-right: 20px;
+	margin-left: 10px;
+}
+
+.enviandoPara p {
+	display: none;
+	margin-left: 20px;
+	font-size: 14px;
+	color: #AEAEAE;
+}
+
+ul {
+	margin: 100px 0;
+}
+
+ul li {
+	width: 100%;
+	height: 40px;
+	background-color: white;
+	margin: 2px 0;
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	border-radius: 2px;
+	padding: 0 8px;
+}
+
+.privado {
+	background-color: #FFDEDE;
+}
