--- a/estilos.css
+++ b/estilos.css
@@ -2,8 +2,15 @@
 
 body {
 	background-color: #F3F3F3;
-	
+	-ms-overflow-style: none;
+	scrollbar-width: none;
+	overflow-y: scroll; 
 }
+
+body::-webkit-scrollbar {
+    display: none;
+}
+
 
 * {
 	box-sizing: border-box;
@@ -33,6 +40,7 @@ body {
 	text-align: center;
 	color: #AEAEAE;
 	font-size: 18px;
+	outline: none;
 }
 
 .telaInicial button{
@@ -114,18 +122,26 @@ ul {
 
 ul li {
 	width: 100%;
-	height: 40px;
 	background-color: white;
 	margin: 2px 0;
 	display: flex;
 	flex-wrap: wrap;
 	align-items: center;
 	border-radius: 2px;
-	padding: 0 8px;
+	padding: 8px 8px;
+}
+
+li p {
+	margin-left: 5px;
+	word-break: break-word;
+}
+
+.entraSai {
+	background-color: lightgray;
 }
 
 .privado {
-	background-color: #FFDEDE;
+	background-color: lightpink;
 }
 
 .participantesAtivos {
@@ -178,18 +194,35 @@ ul li {
 .fixoIon ion-icon, .contatoIon ion-icon  {
 	width: 35px;
 	height: 30px;
+	
 }	
 
-/* arrumar no onclick */
-.fixo:active .check, .contato:active .check {
+.contato > ion-icon {
+	opacity: 0;
+}
+.checkContato > ion-icon {
+	color: #28BB25;
 	opacity: 1;
 }
 
-.check {
-	color: #28BB25;
+.fixo > ion-icon {
 	opacity: 0;
+}
+.check > ion-icon {
+	color: #28BB25;
+	opacity: 1;
+}
+
+.inputMensagem input {
+	outline: none;
 }
 
 .escondido{
 	display: none;
 }
+
+.b {
+	font-weight: bold;
+}
+
+
