--- a/estilos.css
+++ b/estilos.css
@@ -1,7 +1,8 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
 body {
 	background-color: #F3F3F3;
+	font-family: 'Roboto', sans-serif;
 	-ms-overflow-style: none;
 	scrollbar-width: none;
 	overflow-y: scroll; 
@@ -10,7 +11,6 @@ body {
 body::-webkit-scrollbar {
     display: none;
 }
-
 
 * {
 	box-sizing: border-box;
@@ -194,12 +194,12 @@ li p {
 .fixoIon ion-icon, .contatoIon ion-icon  {
 	width: 35px;
 	height: 30px;
-	
 }	
 
 .contato > ion-icon {
 	opacity: 0;
 }
+
 .checkContato > ion-icon {
 	color: #28BB25;
 	opacity: 1;
@@ -208,6 +208,7 @@ li p {
 .fixo > ion-icon {
 	opacity: 0;
 }
+
 .check > ion-icon {
 	color: #28BB25;
 	opacity: 1;
